<resources>
    <string name="app_name">Lupus in Tabula</string>
    <string name="new_player_name">Player Name</string>
    <string name="add_player_button">Add</string>
    <string name="next">Start Game</string>
    <string name="name_existing">Name already existing</string>
    <string name="name_existing_long">The entered name already exists.</string>
    <string name="ok">Ok</string>

    <string name="cnf_player_count_label">Number of Players</string>
    <string name="cnf_werewolf_count_label">Werewolves</string>
    <string name="cnf_villager_count_label">Villagers</string>
    <string name="cnf_seer_count_label">Seers</string>
    <string name="cnf_doctor_count_label">Doctors</string>
    <string name="cnf_hunter_count_label">Hunters</string>
    <string name="cnf_witch_count_label">Witches</string>
    <string name="cnf_priest_count_label">Priests</string>
    <string name="cnf_amor_count_label">Amors</string>
    <string name="cnf_drunk_count_label">Drunks</string>
    <string name="cnf_auto_assign_label">Auto assign roles</string>
    <string name="cnf_start_btn_label">Start Game</string>
    <string name="cnf_x_players_unassigned">%1$d players unassigned</string>
    <string name="cnf_add_new_role">Add New role</string>
    <string name="cnf_add_new_role_hint">Role name</string>
    <string name="no_of_player_title">Total number of player %1$d</string>
    <string name="title_activity_role_setup">Role Setup</string>

</resources>
